--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -8,10 +8,21 @@
   <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <form class="pt-3" [formGroup]="userUpdateForm">
+        <div class="alert alert-danger" role="alert" *ngIf="error">
+          Error: {{ error }}
+        </div>
+        <div class="alert alert-success" role="alert" *ngIf="response">
+          {{ response }}
+        </div>
+        <form
+          class="pt-3"
+          [formGroup]="userUpdateForm"
+          (ngSubmit)="updateUserData()"
+        >
           <div class="row">
             <div class="col-lg-6">
               <div class="form-group">
+                <label for="fullName">User Full Name</label>
                 <input
                   type="text"
                   formControlName="fullName"
@@ -24,6 +35,7 @@
             </div>
             <div class="col-lg-6">
               <div class="form-group">
+                <label for="email">User Email</label>
                 <input
                   type="email"
                   formControlName="email"
@@ -38,6 +50,7 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="form-group">
+                <label for="userType">User Role</label>
                 <select
                   class="form-control form-control-lg"
                   id="userType"
@@ -56,6 +69,7 @@
             </div>
             <div class="col-lg-6">
               <div class="form-group">
+                <label for="password">User Default Password</label>
                 <input
                   type="password"
                   formControlName="password"
@@ -69,6 +83,7 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="form-group">
+                <label for="phoneNumber">User Phone Number</label>
                 <input
                   type="text"
                   formControlName="phoneNumber"
@@ -81,6 +96,7 @@
             </div>
             <div class="col-lg-6">
               <div class="form-group">
+                <label for="address">User Address</label>
                 <input
                   type="text"
                   formControlName="address"
@@ -92,8 +108,9 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6" *ngIf="userType === 'Delivery Agent'">
               <div class="form-group">
+                <label for="vehicleNo">Delivery Agent's Vehicle No</label>
                 <input
                   type="text"
                   formControlName="vehicleNo"
@@ -104,8 +121,9 @@
                 />
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6" *ngIf="userType === 'Vendor'">
               <div class="form-group">
+                <label for="pricePackage">Vendor's Price Package(₦)</label>
                 <input
                   type="number"
                   formControlName="pricePackage"
@@ -117,9 +135,10 @@
               </div>
             </div>
           </div>
-          <div class="row">
+          <div class="row" *ngIf="userType === 'Vendor'">
             <div class="col-lg-6">
               <div class="form-group">
+                <label for="pricePackage">Vendor's Location Latitude</label>
                 <input
                   type="number"
                   formControlName="latitude"
@@ -132,6 +151,7 @@
             </div>
             <div class="col-lg-6">
               <div class="form-group">
+                <label for="pricePackage">Vendor's Location Longitude</label>
                 <input
                   type="number"
                   formControlName="longitude"
@@ -144,6 +164,7 @@
             </div>
           </div>
           <div class="form-group">
+            <label for="pricePackage">User's Referral ID</label>
             <input
               type="text"
               formControlName="referralId"
@@ -152,6 +173,19 @@
               name="referralId"
               placeholder="Referral Id"
             />
+          </div>
+
+          <div class="mt-3">
+            <button
+              class="
+                btn btn-block btn-primary btn-lg
+                font-weight-medium
+                auth-form-btn
+              "
+              [disabled]="!userUpdateForm.valid"
+            >
+              Update User
+            </button>
           </div>
 
           <div class="row">
