--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -158,7 +158,7 @@
           </div>
           <div class="col-lg-6">
             <div class="form-group">
-              <label for="password">User Password</label>
+              <label for="password">User Default Password</label>
               <input
                 type="password"
                 formControlName="password"
