--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -160,11 +160,11 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              routerLink="payments/transactions"
+              routerLink="payments/history"
               routerLinkActive="active"
               #payments="routerLinkActive"
             >
-              Transactions
+              Payment History
             </a>
           </li>
           <li class="nav-item">
@@ -180,11 +180,11 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              routerLink="payments/history"
+              routerLink="payments/transactions"
               routerLinkActive="active"
               #history="routerLinkActive"
             >
-              History
+              Transactions
             </a>
           </li>
           <li class="nav-item">
