update interface and data properties for unassigned orders

--- a/src/app/shared/list-pagination/list-pagination.component.html
+++ b/src/app/shared/list-pagination/list-pagination.component.html
@@ -1,8 +1,8 @@
 <ngb-pagination
-  *ngIf="fullResult?.totalPages > 1"
-  [collectionSize]="fullResult.totalCount"
-  [pageSize]="fullResult.pageSize"
-  [page]="fullResult.pageIndex + 1"
+  *ngIf="fullResult?.data.totalPages > 1"
+  [collectionSize]="fullResult.data.totalCount"
+  [pageSize]="fullResult.data.pageSize"
+  [page]="fullResult.data.pageIndex + 1"
   [rotate]="true"
   [ellipses]="false"
   aria-label="Default pagination"
