--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -121,11 +121,11 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              routerLink="companies/companies-list"
+              routerLink="pending-orders/pending-orders-list"
               routerLinkActive="active"
               #companies_list="routerLinkActive"
             >
-              Pending Orders
+              Unassigned Orders
             </a>
           </li>
         </ul>
