--- a/src/app/payments/history/history.component.html
+++ b/src/app/payments/history/history.component.html
@@ -3,8 +3,8 @@
   <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Transactions History</h4>
-        <p class="card-description">All transactions on this account</p>
+        <h4 class="card-title">Payments History</h4>
+        <p class="card-description">All payments for orders made</p>
         <div class="table-responsive" *ngIf="fullResult">
           <table class="table table-striped">
             <thead>
