populate orders data in table

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -80,7 +80,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              routerLink="adverts/offers"
+              routerLink="orders/orders-list"
               routerLinkActive="active"
               #adverts="routerLinkActive"
             >
