fixed bugs related to new models and services

--- a/src/app/cylinders/cylinder/cylinder.component.html
+++ b/src/app/cylinders/cylinder/cylinder.component.html
@@ -1,7 +1,7 @@
 <app-header
   *ngIf="cylinder"
   [pageTitle]="cylinder?.name"
-  path="User / {{ cylinder?.name }}"
+  path="Cylider / {{ cylinder?.name }}"
   icon="mdi-gas-cylinder"
 ></app-header>
 <div class="row">
